--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "electron-store": "^8.0.2",
+    "json-schema-typed": "7.0.3",
+    "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-fast-marquee": "^1.3.2",
     "react-hot-loader": "4.13.0",
-    "styled-components": "5.3.0"
+    "react-icons": "^4.4.0",
+    "react-resizable": "^3.0.4",
+    "react-spring": "^9.4.5",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
@@ -39,7 +46,7 @@
     "@types/jest": "26.0.23",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
-    "@types/styled-components": "5.1.10",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "babel-loader": "8.2.2",
