--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "license": "MIT",
   "dependencies": {
     "electron-store": "^8.0.2",
+    "generate-avatar": "^1.4.10",
     "json-schema-typed": "7.0.3",
+    "lorem-ipsum": "^2.0.8",
     "polished": "^4.2.2",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "react-fast-marquee": "^1.3.2",
     "react-hot-loader": "4.13.0",
@@ -45,6 +48,7 @@
     "@types/electron-devtools-installer": "2.2.0",
     "@types/jest": "26.0.23",
     "@types/react": "17.0.11",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "17.0.8",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "4.27.0",
